--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -300,7 +300,7 @@ textarea:focus {
   .header-area .top-header-area {
     width: 100%;
     height: 100px;
-    background-color: #FF8C00;
+    background-color: #ff8c00;
     position: relative;
     z-index: 1; }
     @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -312,7 +312,7 @@ textarea:focus {
     .header-area .top-header-area .top-header-content {
       width: 100%;
       height: 100px;
-      background-color: #FF8C00;
+      background-color: #ff8c00;
       position: relative;
       z-index: 1; }
       @media only screen and (min-width: 768px) and (max-width: 991px) {
